Weird warning under Windows
Trying to execute remote-viewer on Windows I'm getting this warning:
(remote-viewer.exe:124): GSpice-WARNING **: 17:43:35.610: Could not create org.gnome.SessionManager dbus proxy: Unknown or unsupported transport ôunixö for address ôunix:path=/run/user/25800/busö
nothing to worry but I don't think DBus on Windows is expected.