desktop: Do not try org.gnome.SessionManager on Windows or Mac

DBus support is available on those systems, yet it doesn't make sense
to attempt to connect to GNOME session manager.

Mark gnome_integration_init() as unused. The following patch is
compiling out the GNOME support instead. It is not squashed here,
because it makes reviewing much harder.

Fixes:
https://gitlab.freedesktop.org/spice/spice-gtk/issues/81

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Frediano Ziglio <fziglio@redhat.com>